fix missing buttons on small screens

--- a/app/assets/stylesheets/wizard.scss
+++ b/app/assets/stylesheets/wizard.scss
@@ -332,9 +332,6 @@ body.wizard {
     align-items: center;
     font-weight: bold;
     margin-right: -1.5em;
-    @media screen and (max-width: 767px) {
-      display: none;
-    }
 
     @include breakpoint("mobile-extra-large") {
       margin-bottom: 1em;
